samples/_failures_safe/1761428612_082ea5_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_8d83db77.c: In function ‘main’:
./samples/SAFE/__tmp_8d83db77.c:157:27: error: expected ‘;’ at end of input
  157 |                     printf
      |                           ^
      |                           ;
./samples/SAFE/__tmp_8d83db77.c:157:21: error: expected declaration or statement at end of input
  157 |                     printf
      |                     ^~~~~~
./samples/SAFE/__tmp_8d83db77.c:157:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_8d83db77.c:157:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_8d83db77.c:157:21: error: expected declaration or statement at end of input
